--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="/src/assets/swiper/js/swiper.js"></script>
   <script type="text/javascript" src="../node_module/vue/dist/vue.js"></script>
    <script src="https://unpkg.com/element-ui@1.4/lib/index.js"></script>
+   <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
   <script type="text/javascript" src="../node_modules/vue-awesome-swiper/dist/vue-awesome-swiper.js"></script>
 
 </head>
