--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= htmlWebpackPlugin.options.url %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1843058_a1ipg4z328t.css">
-    <link rel="stylesheet" href="../node_modules/swiper/css/swiper.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1843058_a1ipg4z328t.css">
+    <link rel="stylesheet" href="/node_modules/swiper/css/swiper.css">
     <link rel="stylesheet" href="/src/assets/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="https://unpkg.com/element-ui@1.4/lib/theme-default/index.css">
     <script type="text/javascript" src="/src/assets/swiper/js/swiper.js"></script>
-    <script type="text/javascript" src="../node_module/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/element-ui@1.4/lib/index.js"></script>
     <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
-    <script type="text/javascript" src="../node_modules/vue-awesome-swiper/dist/vue-awesome-swiper.js"></script>
+    <script type="text/javascript" src="/node_modules/vue-awesome-swiper/dist/vue-awesome-swiper.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
